modify: p-fixBtnWrap & c-fixBtn & scss to css

--- a/wp-content/plugins/my-original-plugin/assets/src/css/overwrite/_base.scss
+++ b/wp-content/plugins/my-original-plugin/assets/src/css/overwrite/_base.scss
@@ -122,8 +122,11 @@
 }
 
 //追従ボタン
+.p-fixBtnWrap:has(.c-fixBtn) {
+  bottom: 8%;
+}
 .c-fixBtn {
-  background: var(--color-linear-fly-high-light);
+  background: var(--color-linear-pewter-blue);
   border-radius: 100px;
 }
 
